# options

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: options-config.cmake.in
example/: CMakeLists.txt  main.cpp
include/options/: optionsbase.h
src/: CMakeLists.txt  optionsbase.cpp
tests/: CMakeLists.txt
